NXP-27371: Cleanup / Format